--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,52 @@
-.venv/
-.DS_Store
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+
+# IDE
+.idea/
 .vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific
+eval_results/
+artifacts/
+*.log
+
 .gitattributes
 
-*__pycache__/
 */.pytest_cache/
 */.mypy_cache/
 */.tox/
@@ -43,7 +86,4 @@ sae_bench/evals/ravel/models/
 **/eval_results/**
 *eval_results*
 **/dev/
-openai_api_key.txt
-dist/
-
 *.png
